--- a/src/components/CategoryPage/CategoryPage.css
+++ b/src/components/CategoryPage/CategoryPage.css
@@ -10,17 +10,10 @@
     text-align: center;
     position: relative;
     font-size: 2.8rem;
-    color: #333;
-}
-
-.section-category-title::after {
-    content: '';
-    display: block;
-    width: 240px;
-    height: 4px;
-    background: #bd5285;
-    margin: 10px auto 0;
-    border-radius: 40px;
+    text-decoration: none;
+    color: var(--text-color);
+    letter-spacing: 1px;
+    text-transform: uppercase;
 }
 
 .products-category-content {
@@ -29,14 +22,6 @@
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-}
-
-.filters-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 250px;
-    /* Fixed width for filters */
 }
 
 .products-page-container {
@@ -67,3 +52,4 @@
         font-size: 20px;
     }
 }
+
