--- a/src/components/ProductCards/ProductCards.css
+++ b/src/components/ProductCards/ProductCards.css
@@ -52,11 +52,13 @@
     font-weight: bold;
     color: #333;
     margin: 0 0 10px;
+    font-weight: 400;
+    letter-spacing: 1px;
 }
 
 .product-price {
     font-size: 1.1rem;
-    color: #ff0000;
+    color: #4d4d4d;
     margin: 0 0 15px;
 }
 
@@ -73,7 +75,7 @@
     font-size: 1rem;
     border-radius: 5px;
     border: 1px solid #ccc;
-    
+
 }
 
 .wishlist-icon {
