--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?  family=Montserrat:ital,wght@0,100;0,200;1,100;1,200&display=swap');
+
 * {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .home-container {
@@ -14,22 +16,17 @@
 
 .section-title {
   margin-bottom: 50px;
-  margin-top: 10px;
+  margin-top: 40px;
   text-align: center;
   position: relative;
-  font-size: 2.8rem;
-  color: #333;
+  color: var(--text-color);
+  font-weight: 400;
+  font-size: 2rem;
+  letter-spacing: 5px;
+  text-transform: uppercase;
 }
 
-.section-title::after {
-  content: '';
-  display: block;
-  width: 380px;
-  height: 4px;
-  background: #bd5285;
-  margin: 10px auto 0;
-  border-radius: 40px;
-}
+
 
 /* .buttons button{
    width: 100px;
@@ -52,9 +49,9 @@
   cursor: pointer;
   text-align: center;
   border-radius: 50%;
-  width: 110px;
-  height: 110px;
-  background-color: #f8e1e7; /* Color de fondo bonito */
+  width: 120px;
+  height: 120px;
+  background-color: #ffffff; 
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
@@ -67,9 +64,10 @@
 }
 
 .category-item span {
-  font-size: 14px;
+  font-size: 13px;
   color: #333;
   font-weight: 500;
+  letter-spacing: 1px;
 }
 
 .category-item:hover {
