--- a/src/pages/checkoutpage/CheckoutPage.css
+++ b/src/pages/checkoutpage/CheckoutPage.css
@@ -73,6 +73,30 @@
   display: block;
 }
 
+.select-order-group {
+  background: #f6f6f6;
+  border: none;
+  border-radius: 12px;
+  padding: 14px 18px 14px 46px;
+  font-size: 1rem;
+  width: 100%;
+  margin-bottom: 18px;
+  transition: box-shadow 0.2s ease;
+  height: 48px;
+  line-height: 1;
+  display: block;
+}
+
+.select-order-group:focus {
+  outline: none;
+  background: #fff;
+  box-shadow: 0 0 0 3px rgba(119, 119, 119, 0.25);
+}
+
+.input-group select option {
+  color: #0c0c0c;
+}
+
 .input-group input:focus {
   outline: none;
   background: #fff;
